--- a/css/index.css
+++ b/css/index.css
@@ -3,234 +3,7 @@
 body {
     background-color: rgba(211, 211, 211, 0.422);
 }
-
-header {
-    width: 100vw;
-    height: 5em;
-    display: grid;
-    grid-template-columns: 30% 50% 20%;
-    background-color: rgb(5, 77, 5);
-
-    .jgl,
-    .hortifruti,
-    .menu {
-        height: 5em;
-    }
-
-    .jgl {
-        text-align: right;
-        cursor: pointer;
-
-        img {
-            width: 80%;
-            height: 5em;
-        }
-    }
-
-    .hortifruti {
-        overflow: hidden;
-
-        h1 {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 4.2em;
-            font-style: italic;
-            color: white;
-            margin-top: 0.15em;
-            letter-spacing: 0.05em;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-weight: bold;
-        }
-
-        .menu {
-            background-color: orange;
-        }
-    }
-
-    .menu {
-        cursor: pointer;
-
-        span {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3em;
-            font-weight: bold;
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.subTitulo {
-    background-color: rgba(5, 77, 5, 0.555);
-    padding: 0.1em;
-
-    h3 {
-        text-align: center;
-        letter-spacing: 0.2em;
-        word-spacing: 0.2em;
-        color: white;
-        font-style: italic;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-}
-
-/* nav {
-    position: absolute;
-    top: 4.5em;
-    width: 100%;
-    height: 3.5em;
-    display: flex;
-    cursor: pointer;
-
-    .label {
-        width: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-size: 1.8em;
-    }
-} */
-
-main {
-    position: fixed;
-    width: 100vw;
-    height: calc(100% - 4em);
-    top: 7em;
-
-    .global {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        overflow: hidden;
-
-        .container_produtos {
-            width: 100%;
-            height: 100%;
-
-            .barra_info {
-                width: 100%;
-                height: 2.5em;
-                margin-top: 1em;
-                display: flex;
-                align-items: center;
-
-                .container_search {
-                    width: 70%;
-                    height: 1005;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    .box_search {
-                        width: 90%;
-                        height: 2.5em;
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        border-radius: 2em;
-                        background-color: white;
-                        box-shadow: 0 0 0.3em 0.1em black;
-
-                        .search {
-                            width: 80%;
-                            height: 100%;
-                            border: none;
-                            outline: none;
-                            font-size: 1.8em;
-                            padding-left: 0.5em;
-                            border-radius: 1em 0 0 1em;
-                            background-color: transparent;
-                            font-style: italic;
-                        }
-
-                        button,
-                        span {
-                            display: flex;
-                            background-color: transparent;
-                            border: none;
-                            cursor: pointer;
-                        }
-                    }
-                }
-
-                .container_cart {
-                    width: 27%;
-                    height: 100%;
-                    display: flex;
-                    background-color: rgba(0, 255, 8, 0.405);
-                    border-bottom: 0.2em solid black;
-                    cursor: pointer;
-
-
-                    .icon_cart {
-                        width: 20%;
-                        height: 100%;
-                        text-align: center;
-
-                        span {
-                            font-size: 2.5em;
-                        }
-
-                        p {
-                            position: absolute;
-                            width: 1em;
-                            height: 1em;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            margin-top: -2em;
-                            margin-left: 0.8em;
-                            border-radius: 50%;
-                            background-color: yellow;
-                            box-shadow: 0 0 0.05em 0.1em white;
-                            font-size: 1.8em;
-                        }
-                    }
-
-                    .valor_icon {
-                        width: 70%;
-                        height: 100%;
-                        display: flex;
-                        align-items: end;
-                        justify-content: center;
-                        margin-left: 1em;
-
-                        .cifrao {
-                            font-size: 1.1em;
-                        }
-
-                        .valor {
-                            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                            font-size: 1.5em;
-                            font-style: italic;
-                        }
-                    }
-                }
-            }
-
-            .categorias {
-                width: 100%;
-                height: 2.5em;
-                margin-top: 1em;
-                display: grid;
-                grid-template-columns: repeat(4, 1fr);
-
-                .cat {
-                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                    font-style: italic;
-                    font-size: 1.8em;
-                    text-align: center;
-                    text-decoration: none;
-                    color: black;
-                }
-            }
-
-            .container_iframe {
+.iframe {
                 width: 100%;
                 height: calc(100% - 8.5em);
                 margin: 2em auto;
@@ -282,10 +55,10 @@ main {
                         }
                     }
                 }
-            }
-        }
+}
 
-        .container_resumo {
+/* AREA DO CARRINHO DE COMPRAS */
+.container_resumo {
             width: 100%;
             height: 100%;
             display: flex;
@@ -498,13 +271,4 @@ main {
                     }
                 }
             }
-        }
-    }
-}
-
-.modal_menu{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
 }
