--- a/css/index.css
+++ b/css/index.css
@@ -3,196 +3,150 @@
 body {
     background-color: rgba(211, 211, 211, 0.422);
 }
-.iframe {
-                width: 100%;
-                height: calc(100% - 8.5em);
-                margin: 2em auto;
-                display: grid;
-                gap: 1.2em;
-                grid-template-columns: repeat(3, 1fr);
-                overflow: hidden;
-                overflow-y: scroll;
-                padding: 0 1em;
-                border: 0.1em solid black;
-
-                .container_item {
-                    width: 100%;
-                    height: 12em;
-                    background-color: white;
-                    border-radius: 50%;
-                    margin: 2em auto;
-                    border: none;
-                    border-bottom: 1em solid var(--light-green);
-                    overflow: hidden;
-
-                    .box_titulo {
-                        width: 100%;
-                        height: 4em;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        text-align: center;
-                        border-radius: 30em 0 30em 0;
-                        padding: 0.3em;
-
-                        .titulo {
-                            font-family: var(--fonte-primaria);
-                            font-size: 1.5em;
-                            letter-spacing: 0.1em;
-                        }
-                    }
-
-                    .img {
-                        width: 100%;
-                        height: 4em;
-                        margin-top: 4em;
-                        display: flex;
-
-                        img {
-                            width: 80%;
-                            height: 7em;
-                            margin: -4em 10%;
-                        }
-                    }
-                }
+.iframe{
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 17.5em);
+    margin: 2em auto;
+    background-color: gray;
 }
 
 /* AREA DO CARRINHO DE COMPRAS */
 .container_resumo {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.61);
+
+    .cart_item {
+        position: absolute;
+        width: 95%;
+        height: 85%;
+        margin: 2em 2.5%;
+        border-radius: 2em;
+        background-color: white;
+        overflow: hidden;
+
+        .table {
+            position: absolute;
             width: 100%;
-            height: 100%;
-            display: flex;
-            background-color: rgba(0, 0, 0, 0.61);
+            height: calc(100% - 12em);
+            overflow: hidden;
+            overflow-y: scroll;
 
-            .cart_item {
+            table {
                 position: absolute;
-                width: 95%;
-                height: 85%;
-                margin: 2em 2.5%;
-                border-radius: 2em;
-                background-color: white;
-                overflow: hidden;
+                width: 100%;
+                margin: 0.5em 0;
+                border-collapse: collapse;
+                font-size: 1.5em;
+                font-weight: bold;
+                font-style: italic;
 
-                .table {
-                    position: absolute;
-                    width: 100%;
-                    height: calc(100% - 12em);
-                    overflow: hidden;
-                    overflow-y: scroll;
+                th {
+                    text-align: center;
+                    border-bottom: 0.2em solid black;
+                }
 
-                    table {
-                        position: absolute;
-                        width: 100%;
-                        margin: 0.5em 0;
-                        border-collapse: collapse;
-                        font-size: 1.5em;
+                tr {
+                    height: 1.8em;
+                }
+
+                .linha {
+                    border-bottom: 0.05em dashed black;
+                }
+
+                td {
+                    text-align: center;
+                }
+
+                .desc {
+                    text-align: left;
+                    padding-left: 1em;
+                }
+
+                .qnt_cart {
+                    display: flex;
+                    align-items: center;
+                    width: 7em;
+                    background-color: rgba(255, 166, 0, 0.795);
+                    height: 1.5em;
+                    border-radius: 1em;
+
+                    button {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 35%;
+                        height: 1.5em;
+                        border: none;
+                        background-color: transparent;
+                    }
+
+                    input {
+                        width: 30%;
+                        height: 1.3em;
+                        text-align: center;
+                        border: none;
+                        outline: none;
+                        background-color: transparent;
                         font-weight: bold;
-                        font-style: italic;
+                        font-size: 1.2em;
+                    }
 
-                        th {
-                            text-align: center;
-                            border-bottom: 0.2em solid black;
-                        }
-
-                        tr {
-                            height: 1.8em;
-                        }
-
-                        .linha {
-                            border-bottom: 0.05em dashed black;
-                        }
-
-                        td {
-                            text-align: center;
-                        }
-
-                        .desc {
-                            text-align: left;
-                            padding-left: 1em;
-                        }
-
-                        .qnt_cart {
-                            display: flex;
-                            align-items: center;
-                            width: 7em;
-                            background-color: rgba(255, 166, 0, 0.795);
-                            height: 1.5em;
-                            border-radius: 1em;
-
-                            button {
-                                display: flex;
-                                align-items: center;
-                                justify-content: center;
-                                width: 35%;
-                                height: 1.5em;
-                                border: none;
-                                background-color: transparent;
-                            }
-
-                            input {
-                                width: 30%;
-                                height: 1.3em;
-                                text-align: center;
-                                border: none;
-                                outline: none;
-                                background-color: transparent;
-                                font-weight: bold;
-                                font-size: 1.2em;
-                            }
-
-                            input[type="number"]::-webkit-inner-spin-button,
-                            input[type="number"]::-webkit-outer-spin-button {
-                                -webkit-appearance: none;
-                                margin: 0;
-                            }
-                        }
-
-                        .cart_vazio_text {
-                            background-color: yellow;
-                            box-shadow: 0 0 0.5em 0.1em black;
-                        }
-
-                        .btn_cart_vazio {
-                            width: 10em;
-                            border-radius: 0.5em;
-                            font-family: cursive;
-                            font-size: 1.5em;
-                            letter-spacing: 0.1em;
-                            background-color: yellow;
-                            box-shadow: 0 0 0.5em 0.1em black;
-                            border: none;
-                            cursor: pointer;
-
-                        }
-
-                        .btn_continuarComprando {
-                            width: 15em;
-                            height: 2em;
-                            border-radius: 0.5em;
-                            font-family: cursive;
-                            font-size: 1em;
-                            letter-spacing: 0.1em;
-                            background-color: yellow;
-                            box-shadow: 0 0 0.5em 0.1em black;
-                            border: none;
-                            cursor: pointer;
-
-                        }
+                    input[type="number"]::-webkit-inner-spin-button,
+                    input[type="number"]::-webkit-outer-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
                     }
                 }
 
-                .footer {
-                    position: absolute;
-                    width: 100%;
-                    height: 12em;
-                    bottom: 0em;
-                    background-color: lightgray;
+                .cart_vazio_text {
+                    background-color: yellow;
+                    box-shadow: 0 0 0.5em 0.1em black;
+                }
 
-                    table {
-                        width: 98%;
-                        text-align: center;
+                .btn_cart_vazio {
+                    width: 10em;
+                    border-radius: 0.5em;
+                    font-family: cursive;
+                    font-size: 1.5em;
+                    letter-spacing: 0.1em;
+                    background-color: yellow;
+                    box-shadow: 0 0 0.5em 0.1em black;
+                    border: none;
+                    cursor: pointer;
 
-                        /* thead{
+                }
+
+                .btn_continuarComprando {
+                    width: 15em;
+                    height: 2em;
+                    border-radius: 0.5em;
+                    font-family: cursive;
+                    font-size: 1em;
+                    letter-spacing: 0.1em;
+                    background-color: yellow;
+                    box-shadow: 0 0 0.5em 0.1em black;
+                    border: none;
+                    cursor: pointer;
+
+                }
+            }
+        }
+
+        .footer {
+            position: absolute;
+            width: 100%;
+            height: 12em;
+            bottom: 0em;
+            background-color: lightgray;
+
+            table {
+                width: 98%;
+                text-align: center;
+
+                /* thead{
                             background-color: blue;
                             
                             tr{
@@ -205,70 +159,70 @@ body {
                                 }
                             }
                         } */
-                        tbody {
+                tbody {
 
-                            tr {
-                                margin: 0.3em 0;
-                                display: flex;
-                                justify-content: space-between;
-                                /* grid-template-columns: 50% 10% 40%; */
-                                font-size: 1.5em;
-                                font-weight: bold;
+                    tr {
+                        margin: 0.3em 0;
+                        display: flex;
+                        justify-content: space-between;
+                        /* grid-template-columns: 50% 10% 40%; */
+                        font-size: 1.5em;
+                        font-weight: bold;
 
-                                .col-1 {
-                                    width: 50%;
-                                    text-align: left;
-                                    margin-left: 0.5em;
-                                }
+                        .col-1 {
+                            width: 50%;
+                            text-align: left;
+                            margin-left: 0.5em;
+                        }
 
-                                .col-2 {
-                                    width: 30%;
-                                    display: flex;
-                                    align-items: center;
+                        .col-2 {
+                            width: 30%;
+                            display: flex;
+                            align-items: center;
 
-                                    input {
-                                        width: 100%;
-                                        text-align: center;
-                                    }
-                                }
-
-                                .col-3 {
-                                    width: 20%;
-                                    text-align: right;
-                                }
+                            input {
+                                width: 100%;
+                                text-align: center;
                             }
                         }
-                    }
-                }
-            }
 
-            .btn_buy {
-                position: absolute;
-                width: 100%;
-                height: 5%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                bottom: 2em;
-
-                a {
-                    width: 90%;
-                    height: 3em;
-
-                    button {
-                        width: 100%;
-                        height: 3em;
-                        border-radius: 2em;
-                        background-color: orange;
-                        border: none;
-                        box-shadow: 0 0 0.5em 0.1em white;
-
-                        p {
-                            font-family: Georgia, 'Times New Roman', Times, serif;
-                            font-size: 2em;
-                            letter-spacing: 0.1em;
+                        .col-3 {
+                            width: 20%;
+                            text-align: right;
                         }
                     }
                 }
             }
+        }
+    }
+
+    .btn_buy {
+        position: absolute;
+        width: 100%;
+        height: 5%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        bottom: 2em;
+
+        a {
+            width: 90%;
+            height: 3em;
+
+            button {
+                width: 100%;
+                height: 3em;
+                border-radius: 2em;
+                background-color: orange;
+                border: none;
+                box-shadow: 0 0 0.5em 0.1em white;
+
+                p {
+                    font-family: Georgia, 'Times New Roman', Times, serif;
+                    font-size: 2em;
+                    letter-spacing: 0.1em;
+                }
+            }
+        }
+    }
 }
